Thu Mar 18 12:20:18 GMT 2004  Olly Betts <olly@survex.com>

	* configure.in: Improved the --enable-runtime-pseudo-reloc check.

Thu Mar 18 00:45:15 GMT 2004  Olly Betts <olly@survex.com>

	* bin/Makefile.am,tests/Makefile.am: Pass the magic mingw/cygwin flag
	  when linking the programs in bin and tests.

Thu Mar 18 00:33:22 GMT 2004  Olly Betts <olly@survex.com>

	* configure.in,xapian-config.in: mingw and cygwin both need
	  -Wl,--enable-runtime-pseudo-reloc passing when linking.
	  Arrange for xapian-config to include this, and check that
	  the ld installed is a new enough version (or at least that
	  it was at configure time).

Tue Mar 16 01:40:43 GMT 2004  Olly Betts <olly@survex.com>

	* docs/matcherdesign.html: Merged in more details from a message I
	  sent to the mailing list.

Mon Mar 15 20:39:21 GMT 2004  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Fail the test if there's still a directory after
	  rmdir(), or there isn't a directory after mkdir().  Close a
	  QuartzDatabase or QuartzWritableDatabase before trying to overwrite
	  it - cygwin doesn't allow use to delete open/locked files...

Mon Mar 15 20:38:11 GMT 2004  Olly Betts <olly@survex.com>

	* backends/database.cc: Database::Internal::Internal::keep_alive()
	  should be Database::Internal::keep_alive().

Mon Mar 15 17:20:58 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/base.h: Returning a void result makes SGI's compiler
	  complain - don't!

Mon Mar 15 14:34:44 GMT 2004  Olly Betts <olly@survex.com>

	* common/omdebug.cc: Only use O_SYNC (on the debug log) if we have it.

Sun Mar 14 17:48:52 GMT 2004  Olly Betts <olly@survex.com>

	* tests/runtest.in: Mark with @configure_input@.

Thu Mar 11 23:53:43 GMT 2004  Olly Betts <olly@survex.com>

	* common/database.h,common/termlist.h,include/xapian/database.h,
	  include/xapian/enquire.h: Attempted fixes for warnings given by
	  SGI's MIPSpro C++ compiler.

Thu Mar 11 23:51:10 GMT 2004  Olly Betts <olly@survex.com>
