@@ -1,3 +1,8 @@
+Sat Mar 20 16:23:13 GMT 2004  Olly Betts <olly@survex.com>
+
+	* configure.in,backends/quartz/quartz_table_manager.cc,common/utils.h:
+	  Added configure test for link() to avoid infinite loop on mingw!
+
 Thu Mar 18 12:20:18 GMT 2004  Olly Betts <olly@survex.com>
 
 	* configure.in: Improved the --enable-runtime-pseudo-reloc check.
